--- a/Order-Service/pom.xml
+++ b/Order-Service/pom.xml
@@ -49,9 +49,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
 		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>21.1.0.0</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- You can update this to the latest version -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
