--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=my-order-service
 server.port=8081
-spring.datasource.url=jdbc:oracle:thin:@DESKTOP-2GU83B7:1521:XE
-spring.datasource.username=SYSTEM
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=system
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
