--- a/SpringBoot-1/pom.xml
+++ b/SpringBoot-1/pom.xml
@@ -47,11 +47,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.2.6</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
 		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>21.1.0.0</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- You can update this to the latest version -->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
 		<dependency>
@@ -69,12 +68,7 @@
 			<artifactId>expressly</artifactId>
 			<version>5.0.0</version>
 		</dependency>
-
-
-
 	</dependencies>
-
-
 	<build>
 		<plugins>
 			<plugin>
